[package]
name = "rustovio"
version = "0.1.0"
description = "bindings to verovio, an engraving library"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["music", "musicxml", "engraving", "verovio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"
