[package]
name = "rustovio"
version = "0.1.1-dev"
description = "bindings to verovio, an engraving library"
documentation = "https://docs.rs/rustovio"
homepage = "https://github.com/mockersf/rustovio"
repository = "https://github.com/mockersf/rustovio"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["music", "musicxml", "engraving", "verovio"]

[dependencies]
base64 = { version = "0.21", optional = true }

[features]
default = [ "midi-decoding" ]
midi-decoding = [ "base64" ]

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"
